--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,7 @@
-
+/* GENERAL CSS*/
 
 body {
-    font-family: 'Neuton', serif;
-}
-
-svg {
-    fill: lightgray;
-    stroke: darkgrey;
+    font-family: 'Neuton';
 }
 
 h1 {
@@ -22,6 +17,13 @@ h2 {
     margin-bottom: 30px;
 }
 
+/* VISUALIZATIONS CSS*/
+
+svg {
+    fill: lightgray;
+    stroke: darkgrey;
+}
+
 /*
 .brush {
 	fill: #ccc;
@@ -29,36 +31,43 @@ h2 {
 	pointer-events: none;
 }*/
 
-#time-period-max,
-#time-period-min {
-    background-color: #f1fcff;
+/* FULLPAGE.JS STEPPER CSS*/
+#fp-nav ul li .fp-tooltip {
+    color: black;
 }
 
-.axis line,
-.axis path {
-    fill: none;
-    stroke: #555;
-    shape-rendering: crispEdges;
-}
+/* Backgrounds will cover all the sections. Add ".load-background" for lazy loading!
+	* --------------------------------------- */
+/*#section0,*/
+/*#section1,*/
+/*#section2,*/
+/*#section3,
+#section4,
+#section5,
+#section6,
+#section7 {*/
+/*    background-size: cover;*/
+/*    background-attachment: fixed;*/
+/*}*/
 
-.tick text {
-    font-family: sans-serif;
-    font-size: 11px;
-    fill: #555;
-}
-
-#priovis .x-axis text {
-    font-weight: 600;
-}
-
-.area {
-    fill: #825a5a;
-}
-
-.area.area-age {
-    fill: #94a97a;
-}
-
-.bar {
-    fill: #93bebf;
-}
+/* Defining each section background and styles
+* --------------------------------------- */
+/*#section0{*/
+/*    background-image: url(imgs/bg1.jpg);*/
+/*}*/
+/*#section0 h1{*/
+/*    top: 50%;*/
+/*    transform: translateY(-50%);*/
+/*    position: relative;*/
+/*}*/
+/*#section2{*/
+/*    background-image: url(imgs/bg3.jpg);*/
+/*    padding: 6% 0 0 0;*/
+/*}*/
+/*#section3{*/
+/*    background-image: url(imgs/bg4.jpg);*/
+/*    padding: 6% 0 0 0;*/
+/*}*/
+/*#section3 h1{*/
+/*    color: #000;*/
+/*}*/
