--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 h1 {
     font-size: 36px;
     color: #825a5a;
-    margin-top: 40px;
 }
 
 h2 {
@@ -22,6 +21,10 @@ h2 {
 svg {
     fill: lightgray;
     stroke: darkgrey;
+}
+
+#mainMessage {
+    padding-top: 0px;
 }
 
 /*
