--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,10 @@ svg {
     stroke: darkgrey;
 }
 
-#mainMessage {
-    padding-top: 0px;
+#squirrel_map_vis {
+    width: 100%;
+    height: 100%;
+    margin-left: 20px;
 }
 
 /*
