--- a/css/style.css
+++ b/css/style.css
@@ -69,13 +69,18 @@ svg {
 }
 
 .storyBox {
+    /* vertical scroll within div*/
+    float:left;
+    overflow-y: auto;
+    height: 160px;
+    /* look pretty */
     background-color: lightgray;
     color: black;
-    height: 150px;
     padding: 10px;
-    margin-left: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
     text-align: center;
-    font-size: 13px;
+    font-size: 12px;
 }
 
 #storiesMap {
@@ -85,6 +90,7 @@ svg {
     margin-bottom: 20px;
     padding-right: 20px;
     width: 95%;
+    height: 200px;
     align-self: center;
 }
 
