--- a/css/style.css
+++ b/css/style.css
@@ -37,20 +37,13 @@ svg {
 
 #squirrel_map_vis {
     width: 100%;
-    height: 100%;
+    height: 400px;
     margin-left: 20px;
 }
 
 .mainMessageCaption {
     margin-bottom: 10px;
 }
-
-/*
-.brush {
-	fill: #ccc;
-	fill-opacity: .5;
-	pointer-events: none;
-}*/
 
 
 /* FULLPAGE.JS STEPPER CSS*/
