--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,15 @@ svg {
     margin-bottom: 10px;
 }
 
+.walkMapCaption {
+    margin-bottom: 10px;
+}
+
+#walk_map_vis {
+    width: 100%;
+    height: 700px;
+    margin-left: 20px;
+}
 
 /* FULLPAGE.JS STEPPER CSS*/
 #fp-nav ul li .fp-tooltip {
