--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ svg {
     margin-bottom: 10px;
 }
 
+div.fp-tableCell {
+    height: 700px;
+}
+
 #walk_map_vis {
     width: 100%;
     height: 700px;
