--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,46 @@ svg {
     margin-bottom: 10px;
 }
 
+/* Story Vis */
+.word-cloud-text{
+    stroke: none;
+}
+#sentiment_vis{
+    height: 100%;
+}
+
+.sentiment-svg{
+    stroke: none;
+}
+
+#story_select{
+    width: 30%;
+}
+#sample_stories{
+    padding: 20px;
+}
+.sentiment-tooltip {
+    position: absolute;
+    text-align: center;
+    width: 300px;
+    height: 28px;
+    padding: 2px;
+    font: 12px sans-serif;
+    font-family: "Poppins";
+    background: lightsteelblue;
+    border-radius: 8px;
+    z-index: 200;
+    /*  pointer-events: none;	This line needs to be removed */
+}
+
+.sentiment-tooltip h3,h4 {
+    text-align: left;
+    font-family: "Poppins";
+}
+.sentiment-tooltip h4 {
+    font: 14px sans-serif;
+}
+
 /*
 .brush {
 	fill: #ccc;
