--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ input:focus {
     background-color: #BFDBF7;
     border-radius: 10px 10px 10px 10px;
     padding: 15px;
+    text-align: left;
 }
 
 #comparingSquirNum {
@@ -163,7 +164,7 @@ button:focus {
     text-align: center;
 }
 
-#nextButtonHistorical {
+#nextButtonHistorical, #goBack {
     position: absolute;
     right: 0;
 }
