--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h1 {
     color: #825a5a;
 }
 
-h2 {
+h2.addMargins {
     color: #94a97a;
     font-size: 24px;
     margin-top: 10px;
@@ -45,12 +45,22 @@ svg {
     margin-left: 20px;
 }
 
-.mainMessageCaption {
+.squirrelMapCaption {
     margin-bottom: 10px;
 }
 
-.walkDescription {
+.squirrelMapTitle{
+    color: #825a5a;
+}
+
+.squirrelMapDescription {
+    margin-left: 20px;
     margin-top: 10px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #2e3133;
+}
+
+.walkDescription {
     margin-bottom: 20px;
 }
 
@@ -167,7 +177,8 @@ svg {
     overflow-y: auto;
     height: 160px;
     /* look pretty */
-    background-color: lightgray;
+    background-color: #e6f2ff;
+    border-radius: 15px;
     color: black;
     padding: 10px;
     margin-left: 10px;
@@ -177,19 +188,20 @@ svg {
 }
 
 #storiesMap {
-    background-color: gray;
+    background-color: #BFDBF7;
     /*margin-top: 20px;*/
     margin-left: 20px;
     margin-bottom: 20px;
     padding-right: 20px;
     width: 95%;
-    height: 200px;
+    height: 170px;
+    border-radius: 15px;
     align-self: center;
 }
 
 .stories-carousel {
     margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 5px;
     align-content: center;
     align-items: center;
 }
