--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ svg {
     margin-left: 20px;
     margin-top: 10px;
     margin-bottom: 20px;
+    padding-bottom: 10px;
     border-bottom: 2px solid #2e3133;
 }
 
