--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,24 @@ svg {
 .word-cloud-text{
     stroke: none;
 }
+
+.randomStoryBox {
+    /* vertical scroll within div*/
+    float:left;
+    overflow-y: auto;
+    height: 160px;
+    /* look pretty */
+    background-color: #e6f2ff;
+    border-radius: 15px;
+    color: black;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
+    width: 500px;
+    text-align: center;
+    font-size: 14px;
+}
 #sentiment_vis{
     height: 100%;
     padding-left: 50px;
