--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ svg {
 .word-cloud-text{
     stroke: none;
 }
+.word-cloud-text:hover{
+    opacity: .75;
+    cursor: pointer;
+}
 #sentiment_vis{
     height: 100%;
 }
@@ -71,7 +75,16 @@ svg {
     width: 30%;
 }
 #sample_stories{
-    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    padding: 30px;
+    justify-self: center;
+    /*margin: 0 20px;*/
+    background-color: #BFDBF7;
+    opacity: 0;
+    border: 2px solid #BFDBF7;
+    border-radius: 5px;
 }
 .sentiment-tooltip {
     position: absolute;
@@ -93,6 +106,17 @@ svg {
 }
 .sentiment-tooltip h4 {
     font: 14px sans-serif;
+}
+
+.bubble-axis text, .standard-text, .bar-axis text, .legend-axis text{
+    stroke: none;
+    font: 12px sans-serif;
+    font-family: "Poppins";
+    color: black
+}
+
+.bubble-axis path{
+    stroke: none;
 }
 
 .bubble-tooltip {
@@ -119,6 +143,7 @@ svg {
 .bubble-tooltip h4 {
     font: 16px sans-serif;
 }
+
 
 /* FULLPAGE.JS STEPPER CSS*/
 #fp-nav ul li .fp-tooltip {
