--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ svg {
     padding-left: 50px;
 }
 
+
 .sentiment-svg{
     stroke: none;
 }
@@ -154,16 +155,19 @@ svg {
 .sentiment-tooltip {
     position: absolute;
     text-align: center;
-    width: 300px;
-    height: 28px;
-    padding: 2px;
+    width: fit-content;
+    /*height: 28px;*/
+    padding: 20px;
     font: 12px sans-serif;
     font-family: "Poppins";
-    background: lightsteelblue;
-    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
     z-index: 200;
+    display: flex;
+    flex-direction: row;
     /*  pointer-events: none;	This line needs to be removed */
 }
+
 
 .sentiment-tooltip h3,h4 {
     text-align: left;
