--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@ p {
     left: -10%;
 }
 
+/* Quotes CSS */
+
 .quotes{
     position: absolute;
     left: 50%;
@@ -48,15 +50,34 @@ p {
     z-index: -1;
 }
 
+#quotesTitle{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#transition2Quotes{
+    margin-bottom: 15px;
+}
+
 .quotesRelative{
     position: relative;
     left: -50%;
+    padding: 20px 30px 10px 30px;
 }
 
 .quote{
     text-align: center;
     margin-bottom: 20px;
+    margin-right: 0px;
+    margin-left: 0px;
+
 }
+
+.quotesBox{
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+}
+
 #fourthQuote {
     font-weight: bold;
 }
@@ -431,3 +452,9 @@ button:focus {
 /*#walkMap {*/
 /*    background-image: url(../images/walkmap.png);*/
 /*}*/
+
+#quotesInfo{
+    background: transparent url(../images/quotesBackground.png) no-repeat scroll 0px 0px;
+    background-size: 100% 100%;
+    /*z-index: -1;*/
+}
